documentation/2.0.1/manual/javaGuide/main/templates/_Sidebar.md
<!-- translated -->
<!--
### The template engine
-->
### テンプレートエンジン

<!--
- [[Templates syntax | JavaTemplates]]
- [[Common use cases | JavaTemplateUseCases]]
-->
- [[テンプレートの文法 | JavaTemplates]]
- [[よくある使い方 | JavaTemplateUseCases]]

<!--
### Main concepts
-->
### 基本的な機能

<!--
- [[HTTP programming | JavaActions]]
- [[Asynchronous HTTP programming | JavaAsync]]
- [[The template engine | JavaTemplates]]
- [[HTTP form submission and validation | JavaForms]]
- [[Working with JSON | JavaJsonRequests]]
- [[Working with XML | JavaXmlRequests]]
- [[Handling file upload | JavaFileUpload]]
- [[Accessing an SQL database | JavaDatabase]]
- [[Using the Cache | JavaCache]]
- [[Calling web services | JavaWS]]
- [[Integrating with Akka | JavaAkka]]
- [[Internationalization | JavaI18N]]
- [[The application Global object | JavaGlobal]]
- [[Testing your application | JavaTest]]
-->
- [[HTTP プログラミング | JavaActions]]
- [[非同期 HTTP プログラミング | JavaAsync]]
- [[テンプレートエンジン | JavaTemplates]]
- [[HTTP によるフォームの送信とバリデーション | JavaForms]]
- [[JSON | JavaJsonRequests]]
- [[XML | JavaXmlRequests]]
- [[ファイルアップロード | JavaFileUpload]]
- [[SQL データベースアクセス | JavaDatabase]]
- [[キャッシュ | JavaCache]]
- [[Webサービスの呼び出し | JavaWS]]
- [[Akka の統合 | JavaAkka]]
- [[多言語対応 | JavaI18N]]
- [[Global オブジェクト | JavaGlobal]]
- [[テスト | JavaTest]]

<!--
### Tutorials
-->
### チュートリアル

<!--
- [[Your first application | JavaTodoList]]
-->
- [[はじめてのアプリケーション | JavaTodoList]]